Fix language management in signed documents. -language property was not returned by loadSignedDocument method.